implement user add new address edit new Address

--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -30,7 +30,7 @@
 
           <div class="flex flex-col md:flex-row gap-8">
             <div class="flex justify-center md:justify-start">
-              <img src="/images/user.jpg" alt="User" class="w-24 h-24 rounded-full object-cover border shadow" />
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRH87TKQrWcl19xly2VNs0CjBzy8eaKNM-ZpA&s" alt="User" class="w-24 h-24 rounded-full object-cover border shadow" />
             </div>
             <div class="flex-1 grid grid-cols-1 gap-4">
               <div class="bg-gray-50 p-4 rounded-lg">
