--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -29,9 +29,13 @@
   </head>
 
   <body class="bg-gray-100 min-h-screen">
+            <%- include('partials/navbar') %>
+  
     <div class="flex flex-col lg:flex-row min-h-screen">
-      <!-- Sidebar -->
-      <%- include('partials/sidebar') %>
+
+               <!-- Sidebar -->
+          <%- include('partials/sidebar') %>
+
 
       <!-- Main Content Area -->
       <main class="flex-1 flex justify-center p-2 sm:p-4">
