--- a/views/user/partials/navbar.ejs
+++ b/views/user/partials/navbar.ejs
@@ -12,7 +12,7 @@
 
       <!-- Desktop Nav -->
       <div class="hidden md:flex items-center space-x-8">
-        <% if (page !== 'wishlist' && page !== 'cart' && page !== 'profile' && page !=='orderDetails' && page !=='checkout') { %>
+        <% if (page !== 'wishlist' && page !== 'cart' && page !== 'profile' && page !=='orderDetails' && page !=='viewOrder') { %>
         <!-- Search Input Field -->
         <div class="relative">
           <input type="text" placeholder="Search games..." id="searchInput"
