--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -78,7 +78,10 @@
      <div class="bg-white border border-gray-200 rounded-xl shadow px-4 py-3 w-64">
 
         <div class="flex justify-between items-start mb-2">
-          <div class="flex items-center text-blue-600 font-medium gap-2">
+    <div class="bg-white border border-gray-200 rounded-xl shadow px-4 py-3 w-64"
+     data-address='<%- JSON.stringify(address) %>'
+     data-is-default="<%= address.isDefault %>">
+
             <i class="fas fa-home text-sm"></i>
             <span>
               <%= address.type.charAt(0).toUpperCase() + address.type.slice(1) %>
